        in cases when it is malformed or not provided.
      - the calculated cell volume is now reused in other calculations
        instead repeatedly calculating it.
    - COD::CIF::Data::EstimateZ:
      - the cif_estimate_z() subroutine now accepts optional parameters
        that override the data values provided in the CIF data block.
  * Removed:
    - cif_cod_check:
      - unused COD::CIF::Tags::Manage::tag_is_empty() import.
  * Fixed:
    - pycodcif:
      - executing 'swig' to the build Python module prior to installing
        all Python modules thus removing the need for repeated build.
      - fixing Python3 compile time warnings.
    - cif_cod_check:
      - updating the author name handling logic by introducing an additional
        call of the 'clean_whitespaces' subroutine for each name.
    - explicitly setting locate for 'tree' in cif_tcod_tree tests to make
      the tests locale-independent.

cod-tools (2.2)

  * Added:
    - COD::AtomNeighbours: adding subroutine
      neighbour_list_from_chemistry_openbabel_obmol() for the
      construction of atom neighbours data structure from the object
      of Chemistry::OpenBabel::OBMol Perl module.
    - COD::AuthorNames: adding the get_name_syntax_description()
      subroutine.
    - COD::CIF::Data:
      - adding get_sg_data() subroutine.
      - adding get_source_data_block_name() subroutine.
    - COD::CIF::Data::AtomList:
      - adding datablock_from_atom_array() to ease the conversion of
        atom list data structure to CIF;
      - adding generate_cod_molecule_data_block() subroutine.
    - COD::CIF::Data::Check module.
    - COD::CIF::Data::EstimateZ: adding a warning message about the
      inability to calculate the cell volume in the get_volume()
      subroutine.
    - COD::CIF::DDL::Ranges module.
    - COD::CIF::Tags::COD: adding all the data names that were defined
      in the cif_cod.dic version 0.035.
    - COD::CIF::Tags::Manage:
      - has_unknown_value() subroutine;