@@ -1,18 +1,18 @@
+A 1
+B 1
 C 1
+F 1
+I 1
 A -1
 B -1
+C -1
+F -1
 I -1
 R 1 2/c 1
 P 21 21 21 (origin shift x,y,z+1/4)
 B 1 21 1
-C -1
 B 1 21/m 1
 B 1 21/d 1
-P 1 (-a,-b+c,b+c)
-P 1 (-a+c,-b,a+c)
-P 1 (b+c,a+c,a+b)
-F 1
-F -1
 P 1 2 1 (2*a+c,b,c)
 C 1 2 1 (a,b,a+2*c)
 P 1 2 1 (c,2*a+c,b)
